--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,9 @@
 
     <string name="action_tracker">Tracker</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_workout">Workout</string>
     <string name="error_player">Error</string>
+
+    <string name="act_workout_tv_time">Time:</string>
+    <string name="act_workout_tv_calories">Calories:</string>
 </resources>
