--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="action_settings">Settings</string>
     <string name="txt_description_label">Description</string>
     <string name="txt_calories_label">Calories burn</string>
+    <string name="btn_start_tracker">Start</string>
 </resources>
