--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
 
     <string name="action_settings">Settings</string>
     <string name="txt_description_label">Description</string>
-    <string name="txt_calories_label">Calories burn</string>
+    <string name="txt_calories_label">Approximate total calories burnt</string>
     <string name="btn_start_tracker">Start</string>
 </resources>
